syntax = "proto3";

package controller.ops.services.v1;

import "google/api/annotations.proto";

option go_package = "github.com/hashicorp/boundary/internal/gen/controller/ops/services;services";

service HealthService {
  rpc GetHealth(GetHealthRequest) returns (GetHealthResponse) {
    option (google.api.http) = {
      get: "/health"
    };
  }
}

message GetHealthRequest {}

message GetHealthResponse {}
